Optimize Gemini performance, add request timeouts, fix frontend API build URLs, and clean up markdown/UI rendering